--- a/k8s/slerm/4/deploy.yaml
+++ b/k8s/slerm/4/deploy.yaml
@@ -1,25 +1,25 @@
 ---
-apiVersion: ext/v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: my-deployment
 spec:
   replicas: 2
   selector:
-    matchlabels:
+    matchLabels:
       app: my-app
   strategy:
-    rolingUpdate:
+    rollingUpdate:
       maxSurge: 1
       maxUnavailable: 1
-    type: RolingUpdate
+    type: RollingUpdate
   template:
     metadata:
       labels:
         app: my-app
     spec:
        containers:
-        - image: nginx:1.12
+        - image: nginx:1.13
           name: nginx
           ports:
             - containerPort: 80
