--- a/k8s/slerm/4/deploy.yaml
+++ b/k8s/slerm/4/deploy.yaml
@@ -23,6 +23,22 @@ spec:
           name: nginx
           ports:
             - containerPort: 80
+          readinessProbe:
+            failureThreshold: 3
+            httpGet:
+              path: /
+              port: 80
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 1
+          livenessProbe:
+            failureThreshold: 3
+            httpGet:
+              path: /
+              port: 80
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 10
           resources:
             limits:
               memory: 512Mi
