--- a/k8s/slerm/4/deploy.yaml
+++ b/k8s/slerm/4/deploy.yaml
@@ -18,31 +18,38 @@ spec:
       labels:
         app: my-app
     spec:
-       containers:
-        - image: nginx:1.13
-          name: nginx
-          ports:
-            - containerPort: 80
-          readinessProbe:
-            failureThreshold: 3
-            httpGet:
-              path: /
-              port: 80
-            periodSeconds: 10
-            successThreshold: 1
-            timeoutSeconds: 1
-          livenessProbe:
-            failureThreshold: 3
-            httpGet:
-              path: /
-              port: 80
-            periodSeconds: 10
-            successThreshold: 1
-            timeoutSeconds: 10
-          resources:
-            limits:
-              memory: 512Mi
-              cpu: "1"
-            requests:
-              memory: 256Mi
-              cpu: "0.2"
+      containers:
+      - image: nginx:1.13
+        name: nginx
+        ports:
+          - containerPort: 80
+        readinessProbe:
+          failureThreshold: 3
+          httpGet:
+            path: /
+            port: 80
+          periodSeconds: 10
+          successThreshold: 1
+          timeoutSeconds: 1
+        livenessProbe:
+          failureThreshold: 3
+          httpGet:
+            path: /
+            port: 80
+          periodSeconds: 10
+          successThreshold: 1
+          timeoutSeconds: 10
+        resources:
+          limits:
+            memory: 512Mi
+            cpu: "1"
+          requests:
+            memory: 256Mi
+            cpu: "0.2"
+        volumeMounts:
+          - name: config
+            mountPath: /etc/nginx/conf.d/
+      volumes:
+        - name: config
+          configMap:
+            name: my-configmap
