--- a/k8s/slerm/4/configmap.yaml
+++ b/k8s/slerm/4/configmap.yaml
@@ -6,8 +6,8 @@ metadata:
 data:
   default.conf: |
     server {
-      listen 80 default_server;
-      server_name test;
+      listen 80;
+      server_name ivreone.online;
 
       default_type text/plain;
 
