--- a/k8s/slerm/4/deploy.yaml
+++ b/k8s/slerm/4/deploy.yaml
@@ -47,6 +47,12 @@ spec:
           periodSeconds: 10
           successThreshold: 1
           timeoutSeconds: 10
+        startupProbe:
+          httpGet:
+            path: /
+            port: 80
+          failureThreshold: 30
+          periodSeconds: 10
         resources:
           limits:
             memory: 512Mi
