--- a/ansible/playbooks/credentials.yml
+++ b/ansible/playbooks/credentials.yml
@@ -1,7 +1,7 @@
 users:
-  bob:
-     hashpass:
-     pub_key:
-  alice:
-     hashpass:
-     pub_key:
+  - name: bob
+    password: 1221165656565xcvxcvxvx
+    pub_key: 1234
+  - name: alice
+    password: 121vxvxcvcvcxv21xcvxc
+    pub_key: 1234
