--- a/ansible/playbooks/update.yml
+++ b/ansible/playbooks/update.yml
@@ -1,8 +1,7 @@
-- hosts: all
+- hosts: prom
   become: yes
   tasks:
   - name: Update and upgrade apt packages
     apt:
       upgrade: yes
       update_cache: yes
-      cache_valid_time: 86400 
